frontend table row styling fixed for edit and delete button as well as alignment

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -105,4 +105,5 @@ body {
 
 .display-table {
     width: 100%;
+    text-align: left;
 }
